<?xml version="1.0"?>
<package>
  <name>hg_ros_3dm_gx4</name>
  <version>0.0.1</version>
  <description>MicroStrain 3DM-GX4-XX driver of ROS</description>

  <maintainer email="mahisorn.w@hiveground.com">mahisorn</maintainer>
  <author>Mahisorn Wongphati</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
